@@ -10,6 +10,8 @@ Changes in Shorewall 4.4.12
 
 5)  Add per-ip log rate limiting.
 
+6)  Use new hashlimit match syntax if available.
+
 Changes in Shorewall 4.4.11
 
 1)  Apply patch from Gabriel.
